--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <button onclick="document.getElementById('disclaimer').remove('is-active')" class="delete" aria-label="delete"></button>
         </div>
         <div class="message-body">
-          You can use this site to decrypt your OTP code backups safe in the know that no data will leave your computer. This uses JavaScript libraries to decrypt the backup locally, using your local computer's CPU. Please feel free to check out the source code in the links in the footer.
+          You can use this site to decrypt your OTP code backups, safe in the know that no data will leave your computer. This uses JavaScript libraries to decrypt the backup locally, using your local computer's CPU. Please feel free to check out the source code in the links in the footer.
         </div>
       </article>
       <p style="font-weight:bold;line-height: 3;">Your encrypted Authenticator Pro file</p>
