--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button class="modal-close is-large" aria-label="close" onclick="closeModal()"></button>
       </div>
 
-      <h1 class="title">Authenticator Pro Backup Reader</h1>
+      <h1 class="title"><a href="https://github.com/jamie-mh/AuthenticatorPro">Authenticator Pro</a> Backup Reader</h1>
       <article class="message is-info" id="disclaimer">
         <div class="message-header">
           <p>Privacy Notice</p>
